Java 8 modernization and cleanup
Remove unused imports
Switch on non-enum constants instead of if
Remove trailing (unnecessary) semicolons
Use foreach loops where possible
Use StringBuilder instead of appending to strings in a loop
Do not instantiate boolean
Do not instantiate string
Use StringBuilder instead of StringBuffer
Explicitly mark static blocks of code
Use list.sort instead of Collections.sort
Use Comparator.comparing
Replace !anyMatch(!) with allMatch

Addresses #781 in part

Signed-off-by: Alexander Patrikalakis <amcp@amazon.co.jp>